# abstract_map_simulator

./: CMakeLists.txt  README.md  package.xml  setup.py
config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  planner_local.yaml  recovery_behaviours.yaml  template.world
launch/: guiabot.launch  map.launch  navigate.launch  simulator.launch  world.launch
nodes/: simulator  tag_placement_node  tag_placer  world_simulator
scripts/: yaml_generator.py
src/: find_tags_simulated.cpp
src/abstract_map_simulator/: simulator.py  tools.py
src/human_cues_tag_simulator/: __init__.py  simulator.py  tags.py  tools.py
worlds/: s11.world  s11.xcf  s11.yaml  s11_ppm.txt  s11_start_pose.txt  s11_tags.txt  tags.txt
