<?xml version="1.0"?>
<package format="2">
  <name>abstract_map_simulator</name>
  <version>1.0.0</version>
  <description>The abstract_map_simulator package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <url type="website">https://btalb.github.io/abstract_map/</url>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <maintainer email="b.talbot@qut.edu.au">Ben Talbot</maintainer>

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltag_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>apriltag_ros</exec_depend>
  <exec_depend>tf_conversions</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export></export>
</package>
